fix the settings slider overflow issue

--- a/components/mainPage/menu/settings/settings-slider.module.css
+++ b/components/mainPage/menu/settings/settings-slider.module.css
@@ -9,3 +9,9 @@
     rgb(var(--color-light))
   );
 }
+
+.sliderTransition {
+  transition-property: background-color, color, border-color, left;
+  transition-duration: 300ms;
+  @apply ease-out;
+}
